# loki

./: .gitignore  Cargo.toml  README.md  loki.html
src/: lib.rs  main.rs
src/fetching/: fetcher.rs  indexer.rs  mod.rs  reader.rs  storage.rs
src/parsing/: lexer.rs  parser.rs
src/ranking/: ranker.rs
src/searching/: mod.rs  searcher.rs
ui/: loki.css  loki.html  loki.js
