[package]
name = "loki"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ciborium = "0.2.1"
rust-stemmers = "1.2.0"
serde = { version = "1.0.164", feature = ["derive"] }
walkdir = "2"
xml-rs = "0.8.14"
